--- a/conf.local/common.conf
+++ b/conf.local/common.conf
@@ -20,7 +20,7 @@
 
   <match target="pattern">
     <edit name="lcdfilter" mode="assign">
-      <const>lcdlight</const>
+      <const>lcdnone</const>
     </edit>
   </match>
 
