re-added wqy zen hei

--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -124,6 +124,7 @@
       <string>Liberation Mono</string>
       <string>Luxi Mono</string>
       <string>Inconsolata</string>
+	  <string>Iwona</string>
       <string>Monaco</string>
     </test>
     <edit name="lang" mode="assign_replace">
