--- a/conf.local/full-antialias.conf
+++ b/conf.local/full-antialias.conf
@@ -131,11 +131,12 @@
   <!-- DejaVu and Bitstream -->
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>DejaVu</string>
       <string>Bitstream</string>
+      <string>DejaVu</string>
+	  <string>Inconsolata</string>
+      <string>Iwona</string>
       <string>Liberation</string>
       <string>Luxi</string>
-      <string>Iwona</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -155,6 +156,41 @@
   </match>
 
   <!-- WQY -->
+   <match target="pattern">
+     <test name="family" compare="contains">
+      <string>WenQuanYi Zen Hei</string>
+      <string>WenQuanYi Zen Hei Mono</string>
+      <string>文泉驿正黑</string>
+      <string>文泉驿等宽正黑</string>
+      <string>文泉驛正黑</string>
+      <string>文泉驛等宽正黑</string>
+    </test>
+    <edit name="spacing">
+      <int>90</int>
+    </edit>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintnone</const>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="rh_prefer_bitmaps" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="embeddedbitmap">
+      <bool>false</bool>
+    </edit>
+    <edit name="globaladvance" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+
   <match target="pattern">
     <test name="family" compare="contains">
       <string>WenQuanYi Micro Hei</string>
@@ -218,7 +254,11 @@
   <!-- Droid Sans Fallback -->
   <match target="pattern">
     <test name="family" compare="contains">
+	  <string>Droid Sans Arabic</string>
       <string>Droid Sans Fallback</string>
+	  <string>Droid Sans Hebrew</string>
+	  <string>Droid Sans Japanese</string>
+	  <string>Droid Sans Thai</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
