--- a/conf.local/full-families.conf
+++ b/conf.local/full-families.conf
@@ -28,8 +28,8 @@
       <family>Droid Serif</family>
       <family>Liberation Serif</family>
       <family>Luxi Serif</family>
+      <family>WenQuanYi Zen Hei</family>
       <family>Microsoft YaHei</family>
-      <family>WenQuanYi Micro Hei</family>
       <family>Droid Sans Fallback</family>
     </prefer>
   </alias>
@@ -44,6 +44,7 @@
       <family>Liberation Mono</family>
       <family>Luxi Mono</family>
       <family>WenQuanYi Micro Hei Mono</family>
+	  <family>WenQuanYi Zen Hei Mono</family>
       <family>Microsoft YaHei</family>
       <family>Droid Sans Fallback</family>
     </prefer>
