--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -122,26 +122,11 @@
       <string>Bitstream Vera Sans Mono</string>
       <string>DejaVu Sans Mono</string>
       <string>Liberation Mono</string>
+	  <string>Droid Sans Mono</string>
       <string>Luxi Mono</string>
-      <string>Inconsolata</string>
-	  <string>Iwona</string>
-      <string>Monaco</string>
     </test>
     <edit name="lang" mode="assign_replace">
       <string>en</string>
-    </edit>
-  </match>
-
-  <!-- Courier New: font size -->
-  <match target="pattern">
-    <test name="foundry" compare="contains">
-      <string>Adobe</string>
-    </test>
-    <test name="pixelsize" compare="less">
-      <double>10</double>
-    </test>
-    <edit name="pixelsize" mode="assign">
-      <double>10</double>
     </edit>
   </match>
 
@@ -149,10 +134,10 @@
   <!-- to compute correct PIXELSIZE, use: px = pt * dpi / 72 -->
   <match target="font">
     <test name="pixelsize" compare="less">
-      <double>11.3</double>
+      <double>11.5</double>
     </test>
     <edit name="pixelsize" mode="assign">
-      <double>11.3</double>
+      <double>11.5</double>
     </edit>
   </match>
 
