--- a/conf.local/common.conf
+++ b/conf.local/common.conf
@@ -14,13 +14,13 @@
   <!-- Sub-pixel rendering, 'none' for CRT -->
   <match target="font">
     <edit name="rgba" mode="assign">
-      <const>rgb</const>
+      <const>none</const>
     </edit>
   </match>
 
   <match target="pattern">
     <edit name="lcdfilter" mode="assign">
-      <const>lcddefault</const>
+      <const>lcdnone</const>
     </edit>
   </match>
 
