--- a/conf.local/full-antialias.conf
+++ b/conf.local/full-antialias.conf
@@ -131,9 +131,8 @@
   <!-- DejaVu and Bitstream -->
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>Bitstream</string>
+      <string>Bitstream Vera</string>
       <string>DejaVu</string>
-	  <string>Inconsolata</string>
       <string>Iwona</string>
       <string>Liberation</string>
       <string>Luxi</string>
@@ -254,6 +253,7 @@
   <!-- Droid Sans Fallback -->
   <match target="pattern">
     <test name="family" compare="contains">
+	  <string>Droid Sans</string>
 	  <string>Droid Sans Arabic</string>
       <string>Droid Sans Fallback</string>
 	  <string>Droid Sans Hebrew</string>
@@ -284,7 +284,12 @@
   <!-- Droid -->
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>Droid Sans</string>
+	  <string>Droid Sans</string>
+      <string>Droid Sans Arabic</string>
+	  <string>Droid Sans Fallback</string>
+	  <string>Droid Sans Hebrew</string>
+	  <string>Droid Sans Japanese</string>
+	  <string>Droid Sans Thai</string>
       <string>Droid Serif</string>
       <string>Droid Sans Mono</string>
     </test>
