removed light confs.

--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -109,9 +109,6 @@
     <edit name="hintstyle" mode="assign">
       <const>hintnone</const>
     </edit>
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
-    </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
     </edit>
@@ -119,11 +116,13 @@
 
   <match target="pattern">
     <test qual="any" name="family">
+	  <string>Andale Mono</string>
       <string>Bitstream Vera Sans Mono</string>
       <string>DejaVu Sans Mono</string>
-      <string>Liberation Mono</string>
 	  <string>Droid Sans Mono</string>
+      <string>Liberation Mono</string>
       <string>Luxi Mono</string>
+	  <string>Monaco</string>
     </test>
     <edit name="lang" mode="assign_replace">
       <string>en</string>
