--- a/conf.local/full-antialias.conf
+++ b/conf.local/full-antialias.conf
@@ -120,9 +120,6 @@
     <edit name="hintstyle" mode="assign">
       <const>hintnone</const>
     </edit>
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
-    </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
     </edit>
@@ -132,10 +129,34 @@
   <match target="pattern">
     <test name="family" compare="contains">
       <string>Bitstream Vera</string>
+	  <string>Bitstream Cyberbit</string>
       <string>DejaVu</string>
       <string>Iwona</string>
       <string>Liberation</string>
-      <string>Luxi</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="hingting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+    <edit name="globaladvance" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+
+  <!-- Luxi -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>Luxi Sans</string>
+	  <string>Luxi Serif</string>
+	  <string>Luxi Mono</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -241,9 +262,6 @@
     <edit name="autohint" mode="assign">
       <bool>false</bool>
     </edit>
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
-    </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
     </edit>
@@ -259,6 +277,8 @@
 	  <string>Droid Sans Hebrew</string>
 	  <string>Droid Sans Japanese</string>
 	  <string>Droid Sans Thai</string>
+	  <string>Droid Sans Mono</string>
+	  <string>Droid Serif</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -271,9 +291,6 @@
     </edit>
     <edit name="autohint" mode="assign">
       <bool>false</bool>
-    </edit>
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
     </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
@@ -281,43 +298,13 @@
   </match>
   <!-- Droid Sans Fallback -->
 
-  <!-- Droid -->
-  <match target="pattern">
-    <test name="family" compare="contains">
-	  <string>Droid Sans</string>
-      <string>Droid Sans Arabic</string>
-	  <string>Droid Sans Fallback</string>
-	  <string>Droid Sans Hebrew</string>
-	  <string>Droid Sans Japanese</string>
-	  <string>Droid Sans Thai</string>
-      <string>Droid Serif</string>
-      <string>Droid Sans Mono</string>
-    </test>
-    <edit name="antialias" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hinting" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="hintstyle" mode="assign">
-      <const>hintfull</const>
-    </edit>
-    <edit name="autohint" mode="assign">
-      <bool>true</bool>
-    </edit>
-    <edit name="rgba" mode="assign">
-      <const>rgb</const>
-    </edit>
-    <edit name="globaladvance" mode="assign">
-      <bool>false</bool>
-    </edit>
-  </match>
-  <!-- Droid -->
-
   <!-- Firefly Truetype Font -->
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>AR PL UKai</string>
+      <string>AR PL UKai CN</string>
+	  <string>AR PL UKai HK</string>
+	  <string>AR PL UKai TW</string>
+	  <string>AR PL UKai TW MBE</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
