--- a/conf.local/full-families.conf
+++ b/conf.local/full-families.conf
@@ -53,16 +53,21 @@
   <!-- cursive -->
   <alias>
     <family>Rocket Script</family>
+	<family>Fill Meijer</family>
     <family>AR PL UKai CN</family>
     <family>AR PL UKai TW</family>
+	<family>AR PL UKai TW MBE</family>
     <default><family>cursive</family></default>
   </alias>
 
   <!-- fantasy -->
   <alias>
     <family>Minya Nouvelle</family>
+	<family>Comic Sans MS</family>
+	<family>Orbitron</family>
     <family>AR PL UKai CN</family>
     <family>AR PL UKai TW</family>
+	<family>AR PL UKai TW MBE</family>
     <default><family>fantasy</family></default>
   </alias>
 
