--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -46,7 +46,7 @@
       <string>AR PL UMing TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Verdana</string>
+      <string>Tahoma</string>
     </edit>
   </match>
 
@@ -58,6 +58,17 @@
       <string>AR PL UKai TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Georgia</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family">
+	  <string>黑体</string>
+	  <string>黒体</string>
+      <string>SimHei</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
       <string>Arial</string>
     </edit>
   </match>
@@ -66,7 +77,7 @@
     <test name="family" qual="any">
       <string>DejaVu Sans</string>
     </test>
-    <test name="pixelsize" compare="more_eq">
+    <test name="pixelsize" compare="less_eq">
       <double>16</double>
     </test>
     <edit name="family" mode="assign">
@@ -78,11 +89,35 @@
     <test name="family" qual="any">
       <string>DejaVu Serif</string>
     </test>
-    <test name="pixelsize" compare="more_eq">
+    <test name="pixelsize" compare="less_eq">
       <double>16</double>
     </test>
     <edit name="family" mode="assign">
       <string>DejaVu Serif Condensed</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>Iwona</string>
+    </test>
+    <test name="pixelsize" compare="less_eq">
+      <double>16</double>
+    </test>
+    <edit name="family" mode="assign">
+      <string>Iwona Condensed</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>Liberation Sans</string>
+    </test>
+    <test name="pixelsize" compare="less_eq">
+      <double>16</double>
+    </test>
+    <edit name="family" mode="assign">
+      <string>Liberation Sans Narrow</string>
     </edit>
   </match>
 
