--- a/conf.local/antialias.conf
+++ b/conf.local/antialias.conf
@@ -53,10 +53,10 @@
       <string>AR PL UMing TW MBE</string>
     </test>
     <test name="pixelsize" compare="less_eq">
-      <double>8</double>
+      <double>6</double>
     </test>
     <test name="pixelsize" compre="more_eq">
-      <double>18</double>
+      <double>16</double>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -83,10 +83,10 @@
       <string>AR PL UMing TW MBE</string>
     </test>
     <test name="pixelsize" compare="more">
-      <double>8</double>
+      <double>6</double>
     </test>
     <test name="pixelsize" compre="less">
-      <double>18</double>
+      <double>16</double>
     </test>
     <edit name="antialias" mode="assign">
       <bool>false</bool>
@@ -130,9 +130,11 @@
     <test name="family" compare="contains">
       <string>Bitstream Vera</string>
 	  <string>Bitstream Cyberbit</string>
+	  <string>Cantarell</string>
       <string>DejaVu</string>
       <string>Iwona</string>
       <string>Liberation</string>
+	  <string>Monaco</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
