--- a/conf.local/families.conf
+++ b/conf.local/families.conf
@@ -10,11 +10,9 @@
     <prefer>
       <family>DejaVu Sans</family>
       <family>Bitstream Vera Sans</family>
-      <family>Liberation Sans</family>
-      <family>Droid Sans</family>
-      <family>Luxi Sans</family>
       <family>WenQuanYi Micro Hei</family>
       <family>Microsoft YaHei</family>
+      <family>Droid Sans</family>
       <family>Droid Sans Fallback</family>
     </prefer>
   </alias>
@@ -25,11 +23,9 @@
     <prefer>
       <family>DejaVu Serif</family>
       <family>Bitstream Vera Serif</family>
-      <family>Liberation Serif</family>
-      <family>Droid Serif</family>
-      <family>Luxi Serif</family>
       <family>WenQuanYi Zen Hei</family>
       <family>Microsoft YaHei</family>
+      <family>Droid Serif</family>
       <family>Droid Sans Fallback</family>
     </prefer>
   </alias>
@@ -40,12 +36,10 @@
     <prefer>
       <family>DejaVu Sans Mono</family>
       <family>Bitstream Vera Sans Mono</family>
-      <family>Liberation Mono</family>
-      <family>Droid Sans Mono</family>
-      <family>Luxi Mono</family>
       <family>WenQuanYi Micro Hei Mono</family>
 	  <family>WenQuanYi Zen Hei Mono</family>
       <family>Microsoft YaHei</family>
+      <family>Droid Sans Mono</family>
       <family>Droid Sans Fallback</family>
     </prefer>
   </alias>
@@ -55,6 +49,7 @@
     <family>Rocket Script</family>
 	<family>Fill Meijer</family>
     <family>AR PL UKai CN</family>
+	<family>AR PL UKai HK</family>
     <family>AR PL UKai TW</family>
 	<family>AR PL UKai TW MBE</family>
     <default><family>cursive</family></default>
@@ -66,6 +61,7 @@
 	<family>Comic Sans MS</family>
 	<family>Orbitron</family>
     <family>AR PL UKai CN</family>
+	<family>AR PL UKai HK</family>
     <family>AR PL UKai TW</family>
 	<family>AR PL UKai TW MBE</family>
     <default><family>fantasy</family></default>
