--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -58,7 +58,7 @@
       <string>AR PL UKai TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Georgia</string>
+      <string>Arial</string>
     </edit>
   </match>
 
@@ -77,7 +77,7 @@
     <test name="family" qual="any">
       <string>DejaVu Sans</string>
     </test>
-    <test name="pixelsize" compare="less_eq">
+    <test name="pixelsize" compare="more_eq">
       <double>16</double>
     </test>
     <edit name="family" mode="assign">
@@ -89,7 +89,7 @@
     <test name="family" qual="any">
       <string>DejaVu Serif</string>
     </test>
-    <test name="pixelsize" compare="less_eq">
+    <test name="pixelsize" compare="more_eq">
       <double>16</double>
     </test>
     <edit name="family" mode="assign">
@@ -101,7 +101,7 @@
     <test name="family" qual="any">
       <string>Iwona</string>
     </test>
-    <test name="pixelsize" compare="less_eq">
+    <test name="pixelsize" compare="more_eq">
       <double>16</double>
     </test>
     <edit name="family" mode="assign">
@@ -113,7 +113,7 @@
     <test name="family" qual="any">
       <string>Liberation Sans</string>
     </test>
-    <test name="pixelsize" compare="less_eq">
+    <test name="pixelsize" compare="more_eq">
       <double>16</double>
     </test>
     <edit name="family" mode="assign">
@@ -125,12 +125,16 @@
   <selectfont>
     <acceptfont>
       <pattern>
-        <patelt name="family"> <string>Terminus</string> </patelt>
+        <patelt name="family">
+		  <string>Helvetica</string>
+		</patelt>
       </pattern>
     </acceptfont>
     <rejectfont>
       <pattern>
-        <patelt name="scalable"> <bool>false</bool> </patelt>
+        <patelt name="scalable">
+		  <bool>false</bool>
+		</patelt>
       </pattern>
     </rejectfont>
   </selectfont>
