--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -81,13 +81,11 @@
   </match>
 
   <match target="pattern" name="font">
-<!--
     <test name="lang" compare="contains">
       <string>zh</string>
       <string>ja</string>
       <string>ko</string>
     </test>
--->
     <test name="weight" compre="less_eq">
       <const>medium</const>
     </test>
@@ -123,6 +121,8 @@
       <string>Liberation Mono</string>
       <string>Luxi Mono</string>
 	  <string>Monaco</string>
+	  <string>WenQuanYi Micro Hei Mono</string>
+	  <string>WenQuanYi Zen Hei Mono</string>
     </test>
     <edit name="lang" mode="assign_replace">
       <string>en</string>
@@ -133,10 +133,10 @@
   <!-- to compute correct PIXELSIZE, use: px = pt * dpi / 72 -->
   <match target="font">
     <test name="pixelsize" compare="less">
-      <double>11.5</double>
+      <double>10.5</double>
     </test>
     <edit name="pixelsize" mode="assign">
-      <double>11.5</double>
+      <double>10.5</double>
     </edit>
   </match>
 
