--- a/conf.local/antialias.conf
+++ b/conf.local/antialias.conf
@@ -44,6 +44,28 @@
     </edit>
   </match>
 
+  <!-- Monaco -->
+  <match target="pattern">
+    <test name="family">
+      <string>Monaco</string>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+    <edit name="globaladvance" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+
   <!-- CJK fonts -->
   <match target="pattern">
     <test name="family" compare="contains">
@@ -134,7 +156,6 @@
       <string>DejaVu</string>
       <string>Iwona</string>
       <string>Liberation</string>
-	  <string>Monaco</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -164,7 +185,7 @@
       <bool>true</bool>
     </edit>
     <edit name="autohint" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
     <edit name="hingting" mode="assign">
       <bool>true</bool>
@@ -182,10 +203,10 @@
      <test name="family" compare="contains">
       <string>WenQuanYi Zen Hei</string>
       <string>WenQuanYi Zen Hei Mono</string>
-      <string>文泉驿正黑</string>
-      <string>文泉驿等宽正黑</string>
-      <string>文泉驛正黑</string>
-      <string>文泉驛等宽正黑</string>
+	  <string>文泉驿正黑</string>
+	  <string>文泉驛正黑</string>
+	  <string>文泉驿等宽正黑</string>
+	  <string>文泉驛等寬正黑</string>
     </test>
     <edit name="spacing">
       <int>90</int>
@@ -205,7 +226,7 @@
     <edit name="rh_prefer_bitmaps" mode="assign">
       <bool>false</bool>
     </edit>
-    <edit name="embeddedbitmap">
+    <edit name="embeddedbitmap" mode="assign">
       <bool>false</bool>
     </edit>
     <edit name="globaladvance" mode="assign">
@@ -216,11 +237,11 @@
   <match target="pattern">
     <test name="family" compare="contains">
       <string>WenQuanYi Micro Hei</string>
-      <string>WenQuanYI Micro Hei Mono</string>
-      <string>文泉驿微米黑</string>
-      <string>文泉驿等宽微米黑</string>
-      <string>文泉驛微米黑</string>
-      <string>文泉驛等宽微米黑</string>
+      <string>WenQuanYi Micro Hei Mono</string>
+	  <string>文泉驿微米黑</string>
+	  <string>文泉驛微米黑</string>
+	  <string>文泉驿等宽微米黑</string>
+	  <string>文泉驛等寬微米黑</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
