--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -137,6 +137,15 @@
 		</patelt>
       </pattern>
     </rejectfont>
+	<rejectfont>
+	  <pattern>
+		<patelt name="family">
+		  <string>WenQuanYi Zen Hei Sharp</string>
+		  <string>文泉驿点阵正黑</string>
+		  <string>文泉驛點陣正黑</string>
+		</patelt>
+	  </pattern>
+	</rejectfont>
   </selectfont>
 
 </fontconfig>
