--- a/local.conf
+++ b/local.conf
@@ -16,8 +16,11 @@
   <!-- fonts substitutes -->
   <include ignore_missing="no">conf.local/substitutes.conf</include>
 
-  <!-- font families -->
-  <include ignore_missing="no">conf.local/families.conf</include>
+  <!-- latin fonts families -->
+  <include ignore_missing="no">conf.local/10-families-latin.conf</include>
+
+  <!-- non latin fonts families -->
+  <include ignore_missing="no">conf.local/20-families-non-latin.conf</include>
 
   <!-- Last resorts -->
   <include ignore_missing="no">conf.local/last.conf</include>
