some enhancements. added: spacing.conf, filters.conf

--- a/conf.local/antialias.conf
+++ b/conf.local/antialias.conf
@@ -44,6 +44,42 @@
     </edit>
   </match>
 
+ <!-- MS Font AA -->
+  <match target="pattern">
+    <test name="family" compare="contains">
+	  <family>Lucida Console</family>
+	  <family>Lucida Calligra</family>
+	  <family>Lucida Grande</family>
+	  <family>Lucida Sans Typ</family>
+	  <family>Lucida Handwrit</family>
+	  <family>Lucida Casual CE</family>
+	  <family>Lucida Casual</family>
+	  <family>Lucida Handwriting</family>
+	  <family>Lucida Becker Bright</family>
+	  <family>Lucida Calligraphy</family>
+	  <family>Lucida Blacklet</family>
+	  <family>Lucida Console Thin</family>
+	  <family>Lucida Becker Bright Demi</family>
+	  <family>Lucida Becker</family>
+	  <family>Lucida Becker Caps Roman</family>
+    </test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintfull</const>
+    </edit>
+    <edit name="globaladvance" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+
   <!-- Monaco -->
   <match target="pattern">
     <test name="family">
@@ -151,17 +187,17 @@
   <match target="pattern">
     <test name="family" compare="contains">
       <string>Bitstream Vera</string>
-	  <string>Bitstream Cyberbit</string>
 	  <string>Cantarell</string>
       <string>DejaVu</string>
+	  <string>Droid</string>
       <string>Iwona</string>
-      <string>Liberation</string>
+	  <string>Nimbus</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
     <edit name="autohint" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
     <edit name="hingting" mode="assign">
       <bool>true</bool>
