--- a/conf.local/families-latin.conf
+++ b/conf.local/families-latin.conf
@@ -10,8 +10,6 @@
     <prefer>
       <family>DejaVu Sans</family>
       <family>Bitstream Vera Sans</family>
-      <family>Droid Sans</family>
-	  <family>Luxi Sans</family>
     </prefer>
   </alias>
 
@@ -21,8 +19,6 @@
     <prefer>
       <family>DejaVu Serif</family>
       <family>Bitstream Vera Serif</family>
-      <family>Droid Serif</family>
-	  <family>Luxi Serif</family>
     </prefer>
   </alias>
 
@@ -32,8 +28,6 @@
     <prefer>
       <family>DejaVu Sans Mono</family>
       <family>Bitstream Vera Sans Mono</family>
-      <family>Droid Sans Mono</family>
-	  <family>Luxi Mono</family>
     </prefer>
   </alias>
 
@@ -41,9 +35,9 @@
   <alias>
     <family>cursive</family>
 	<prefer>
+	  <family>Lucida Handwrit</family>
 	  <family>Rocket Script</family>
 	  <family>Fill Meijer</family>
-	  <family>Monaco</family>
 	</prefer>
   </alias>
 
@@ -51,9 +45,9 @@
   <alias>
     <family>fantasy</family>
 	<prefer>
+	  <family>Lucida Calligra</family>
       <family>Minya Nouvelle</family>
 	  <family>Orbitron</family>
-	  <family>Comic Sans MS</family>
 	</prefer>
   </alias>
 
