--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -42,8 +42,8 @@
     <test name="family">
       <string>AR PL UMing CN</string>
       <string>AR PL UMing HK</string>
-      <string>AR PL UMing TW</string>
-      <string>AR PL UMing TW MBE</string>
+	  <string>AR PL UMing TW</string>
+	  <string>AR PL UMing TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Tahoma</string>
@@ -54,11 +54,11 @@
     <test name="family">
       <string>AR PL UKai CN</string>
       <string>AR PL UKai HK</string>
-      <string>AR PL UKai TW</string>
-      <string>AR PL UKai TW MBE</string>
+	  <string>AR PL UKai TW</string>
+	  <string>AR PL UKai TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Arial</string>
+      <string>Verdana</string>
     </edit>
   </match>
 
@@ -66,10 +66,20 @@
     <test name="family">
 	  <string>黑体</string>
 	  <string>黒体</string>
-      <string>SimHei</string>
+	  <string>SimHei</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Arial</string>
+    </edit>
+  </match>
+
+  <!-- Latin fonts -->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>Lucida Grande</string>
+    </test>
+    <edit name="family" mode="assign">
+      <string>Iwona</string>
     </edit>
   </match>
 
@@ -108,44 +118,5 @@
       <string>Iwona Condensed</string>
     </edit>
   </match>
-
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>Liberation Sans</string>
-    </test>
-    <test name="pixelsize" compare="more_eq">
-      <double>16</double>
-    </test>
-    <edit name="family" mode="assign">
-      <string>Liberation Sans Narrow</string>
-    </edit>
-  </match>
-
-    <!-- reject all bitmap fonts, with the exception of 'terminus' -->
-  <selectfont>
-    <acceptfont>
-      <pattern>
-        <patelt name="family">
-		  <string>Helvetica</string>
-		</patelt>
-      </pattern>
-    </acceptfont>
-    <rejectfont>
-      <pattern>
-        <patelt name="scalable">
-		  <bool>false</bool>
-		</patelt>
-      </pattern>
-    </rejectfont>
-	<rejectfont>
-	  <pattern>
-		<patelt name="family">
-		  <string>WenQuanYi Zen Hei Sharp</string>
-		  <string>文泉驿点阵正黑</string>
-		  <string>文泉驛點陣正黑</string>
-		</patelt>
-	  </pattern>
-	</rejectfont>
-  </selectfont>
 
 </fontconfig>
