--- a/local.conf
+++ b/local.conf
@@ -16,11 +16,15 @@
   <!-- fonts substitutes -->
   <include ignore_missing="no">conf.local/substitutes.conf</include>
 
-  <!-- latin fonts families -->
-  <include ignore_missing="no">conf.local/10-families-latin.conf</include>
+  <!-- fonts families -->
+  <include ignore_missing="no">conf.local/families-latin.conf</include>
+  <include ignore_missing="no">conf.local/families-non-latin.conf</include>
 
-  <!-- non latin fonts families -->
-  <include ignore_missing="no">conf.local/20-families-non-latin.conf</include>
+  <!-- fonts filteration -->
+  <include ignore_missing="no">conf.local/filters.conf</include>
+
+  <!-- fonts spacing -->
+  <include ignore_missing="no">conf.local/spacing.conf</include>
 
   <!-- Last resorts -->
   <include ignore_missing="no">conf.local/last.conf</include>
