--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -118,7 +118,8 @@
       <string>Bitstream Vera Sans Mono</string>
       <string>DejaVu Sans Mono</string>
 	  <string>Droid Sans Mono</string>
-      <string>Liberation Mono</string>
+	  <string>Lucida Console</string>
+	  <string>Lucida Console Thin</string>
       <string>Luxi Mono</string>
 	  <string>Monaco</string>
 	  <string>WenQuanYi Micro Hei Mono</string>
