--- a/conf.local/families-non-latin.conf
+++ b/conf.local/families-non-latin.conf
@@ -8,7 +8,7 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>WenQuanYi Micro Hei</family>
+	  <family>WenQuanYi Micro Hei</family>
     </prefer>
   </alias>
 
@@ -16,7 +16,7 @@
   <alias>
     <family>serif</family>
     <prefer>
-      <family>WenQuanYi Zen Hei</family>
+	  <family>WenQuanYi Zen Hei</family>
     </prefer>
   </alias>
 
@@ -24,7 +24,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>WenQuanYi Micro Hei Mono</family>
+	  <family>WenQuanYi Micro Hei Mono</family>
 	  <family>WenQuanYi Zen Hei Mono</family>
     </prefer>
   </alias>
@@ -44,9 +44,10 @@
   <alias>
     <family>fantasy</family>
 	<prefer>
-      <family>Minya Nouvelle</family>
-	  <family>Comic Sans MS</family>
-	  <family>Orbitron</family>
+      <family>AR PL UKai CN</family>
+      <family>AR PL UKai HK</family>
+      <family>AR PL UKai TW</family>
+      <family>AR PL UKai TW MBE</family>
 	</prefer>
   </alias>
 
