--- a/conf.local/families-latin.conf
+++ b/conf.local/families-latin.conf
@@ -10,6 +10,8 @@
     <prefer>
       <family>DejaVu Sans</family>
       <family>Bitstream Vera Sans</family>
+	  <family>Droid Sans</family>
+	  <family>Veranda</family>
     </prefer>
   </alias>
 
@@ -19,6 +21,8 @@
     <prefer>
       <family>DejaVu Serif</family>
       <family>Bitstream Vera Serif</family>
+	  <family>Droid Serif</family>
+	  <family>Tymes</family>
     </prefer>
   </alias>
 
@@ -28,6 +32,8 @@
     <prefer>
       <family>DejaVu Sans Mono</family>
       <family>Bitstream Vera Sans Mono</family>
+	  <family>Droid Sans Mono</family>
+	  <family>Aerial Mono</family>
     </prefer>
   </alias>
 
@@ -35,7 +41,6 @@
   <alias>
     <family>cursive</family>
 	<prefer>
-	  <family>Lucida Handwrit</family>
 	  <family>Rocket Script</family>
 	  <family>Fill Meijer</family>
 	</prefer>
@@ -45,7 +50,6 @@
   <alias>
     <family>fantasy</family>
 	<prefer>
-	  <family>Lucida Calligra</family>
       <family>Minya Nouvelle</family>
 	  <family>Orbitron</family>
 	</prefer>
