--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -41,24 +41,18 @@
   <match target="pattern">
     <test name="family">
       <string>AR PL UMing CN</string>
-      <string>AR PL UMing HK</string>
-	  <string>AR PL UMing TW</string>
-	  <string>AR PL UMing TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Tahoma</string>
+      <string>Cantarell</string>
     </edit>
   </match>
 
   <match target="pattern">
     <test name="family">
       <string>AR PL UKai CN</string>
-      <string>AR PL UKai HK</string>
-	  <string>AR PL UKai TW</string>
-	  <string>AR PL UKai TW MBE</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Verdana</string>
+      <string>Iwona</string>
     </edit>
   </match>
 
@@ -85,10 +79,19 @@
 
   <match target="pattern">
     <test name="family" qual="any">
+      <string>Tahoma</string>
+    </test>
+    <edit name="family" mode="assign">
+      <string>Veranda</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="family" qual="any">
       <string>DejaVu Sans</string>
     </test>
     <test name="pixelsize" compare="more_eq">
-      <double>16</double>
+      <double>18</double>
     </test>
     <edit name="family" mode="assign">
       <string>DejaVu Sans Condensed</string>
@@ -100,7 +103,7 @@
       <string>DejaVu Serif</string>
     </test>
     <test name="pixelsize" compare="more_eq">
-      <double>16</double>
+      <double>18</double>
     </test>
     <edit name="family" mode="assign">
       <string>DejaVu Serif Condensed</string>
@@ -112,7 +115,7 @@
       <string>Iwona</string>
     </test>
     <test name="pixelsize" compare="more_eq">
-      <double>16</double>
+      <double>18</double>
     </test>
     <edit name="family" mode="assign">
       <string>Iwona Condensed</string>
