--- a/conf.local/spacing.conf
+++ b/conf.local/spacing.conf
@@ -3,10 +3,11 @@
 <!-- force fontconfig to treat the Luxi Mono fonts as monospaced, even
      though it detects multiple character widths -->
 <fontconfig>
-<!--
+
   <match target="scan">
 	<test name="family">
       <string>Andale Mono</string>
+	  <string>Aerial Mono</string>
       <string>Bitstream Vera Sans Mono</string>
       <string>DejaVu Sans Mono</string>
       <string>Droid Sans Mono</string>
@@ -17,6 +18,6 @@
 	  <int>100</int>
 	</edit>
   </match>
--->
+
 </fontconfig>
 
