--- a/conf.local/families-non-latin.conf
+++ b/conf.local/families-non-latin.conf
@@ -8,6 +8,7 @@
   <alias>
     <family>sans-serif</family>
     <prefer>
+	  <family>Microsoft YaHei</family>
 	  <family>WenQuanYi Micro Hei</family>
     </prefer>
   </alias>
