minor changes continued

--- a/conf.local/artificial.conf
+++ b/conf.local/artificial.conf
@@ -115,7 +115,9 @@
   <match target="pattern">
     <test qual="any" name="family">
 	  <string>Andale Mono</string>
+	  <string>Aerial Mono</string>
       <string>Bitstream Vera Sans Mono</string>
+	  <string>Courier New</string>
       <string>DejaVu Sans Mono</string>
 	  <string>Droid Sans Mono</string>
       <string>Luxi Mono</string>
@@ -130,10 +132,10 @@
   <!-- to compute correct PIXELSIZE, use: px = pt * dpi / 72 -->
   <match target="font">
     <test name="pixelsize" compare="less">
-      <double>10.5</double>
+      <double>10.66</double>
     </test>
     <edit name="pixelsize" mode="assign">
-      <double>10.5</double>
+      <double>10.66</double>
     </edit>
   </match>
 
