--- a/conf.local/common.conf
+++ b/conf.local/common.conf
@@ -18,4 +18,11 @@
     </edit>
   </match>
 
+  <!-- lcdfilter -->
+  <match target="font">
+	<edit name="lcdfilter" mode="assign">
+	  <const>lcdnone</const>
+	</edit>
+  </match>
+
 </fontconfig>
