--- a/conf.local/families.conf
+++ b/conf.local/families.conf
@@ -9,8 +9,8 @@
     <family>sans-serif</family>
     <prefer>
       <family>DejaVu Sans</family>
-      <family>Bitstream Vera Sans</family>
-	  <family>Veranda</family>
+	  <family>Bitstream Vera Sans</family>
+      <family>Microsoft YaHei</family>
     </prefer>
   </alias>
 
@@ -20,7 +20,8 @@
     <prefer>
       <family>DejaVu Serif</family>
       <family>Bitstream Vera Serif</family>
-	  <family>Tymes</family>
+      <family>WenQuanYi Micro Hei</family>
+      <family>WenQuanYi Zen Hei</family>
     </prefer>
   </alias>
 
@@ -28,8 +29,10 @@
   <alias>
     <family>monospace</family>
     <prefer>
-	  <family>Aerial Mono</family>
-	  <family>Droid Sans Mono</family>
+	  <family>DejaVu Sans Mono</family>
+	  <family>Bitstream Vera Sans Mono</family>
+      <family>WenQuanYi Micro Hei Mono</family>
+      <family>WenQuanYi Zen Hei Mono</family>
     </prefer>
   </alias>
 
@@ -39,6 +42,9 @@
 	<prefer>
 	  <family>Rocket Script</family>
 	  <family>Fill Meijer</family>
+      <family>AR PL UMing CN</family>
+      <family>AR PL UMing HK</family>
+      <family>AR PL UMing TW</family>
 	</prefer>
   </alias>
 
@@ -48,6 +54,9 @@
 	<prefer>
       <family>Minya Nouvelle</family>
 	  <family>Orbitron</family>
+      <family>AR PL UKai CN</family>
+      <family>AR PL UKai HK</family>
+      <family>AR PL UKai TW</family>
 	</prefer>
   </alias>
 
