--- a/conf.local/filters.conf
+++ b/conf.local/filters.conf
@@ -7,7 +7,8 @@
   <!-- reject all bitmap fonts, with the exception of 'terminus' -->
   <selectfont>
 
-	<!-- accept lucida -->
+	<!-- accept Terminus -->
+<!--
     <acceptfont>
       <pattern>
         <patelt name="family">
@@ -15,7 +16,7 @@
 		</patelt>
       </pattern>
     </acceptfont>
-
+-->
     <!-- reject WenQuanYi Zen Hei Sharp -->
     <rejectfont>
       <pattern>
