--- a/conf.local/spacing.conf
+++ b/conf.local/spacing.conf
@@ -9,10 +9,11 @@
       <string>Andale Mono</string>
 	  <string>Aerial Mono</string>
       <string>Bitstream Vera Sans Mono</string>
+	  <string>Courier New</string>
       <string>DejaVu Sans Mono</string>
       <string>Droid Sans Mono</string>
-      <string>Monaco</string>
 	  <string>Luxi Mono</string>
+      <string>Monaco</string>
     </test>
     <edit name="spacing">
 	  <int>100</int>
