--- a/conf.local/substitutes.conf
+++ b/conf.local/substitutes.conf
@@ -63,7 +63,7 @@
 	  <string>SimHei</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>Arial</string>
+      <string>Arial Black</string>
     </edit>
   </match>
 
@@ -82,7 +82,7 @@
       <string>Tahoma</string>
     </test>
     <edit name="family" mode="assign">
-      <string>Veranda</string>
+      <string>Verdana</string>
     </edit>
   </match>
 
