--- a/local.conf
+++ b/local.conf
@@ -17,8 +17,7 @@
   <include ignore_missing="no">conf.local/substitutes.conf</include>
 
   <!-- fonts families -->
-  <include ignore_missing="no">conf.local/families-latin.conf</include>
-  <include ignore_missing="no">conf.local/families-non-latin.conf</include>
+  <include ignore_missing="no">conf.local/families.conf</include>
 
   <!-- fonts filteration -->
   <include ignore_missing="no">conf.local/filters.conf</include>
