--- a/conf.local/antialias.conf
+++ b/conf.local/antialias.conf
@@ -24,15 +24,17 @@
   <!-- MS Font AA -->
   <match target="pattern">
     <test name="foundry">
+<!--
       <string>monotype</string>
+-->
       <string>microsoft</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
-    <edit name="autohint" mode="assign">
-      <bool>false</bool>
-    </edit>
+	<edit name="autohint" mode="assign">
+	  <bool>false</bool>
+	</edit>
     <edit name="hinting" mode="assign">
       <bool>true</bool>
     </edit>
@@ -95,7 +97,7 @@
       <bool>false</bool>
     </edit>
     <edit name="autohint" mode="assign">
-      <bool>false</bool>
+      <bool>true</bool>
     </edit>
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
@@ -115,7 +117,7 @@
       <bool>true</bool>
     </edit>
     <edit name="hinting" mode="assign">
-      <bool>true</bool>
+      <bool>false</bool>
     </edit>
     <edit name="hintstyle" mode="assign">
       <const>hintnone</const>
@@ -123,7 +125,29 @@
     <edit name="globaladvance" mode="assign">
       <bool>false</bool>
     </edit>
-  </match> 
+  </match>
+
+  <!-- Monaco -->
+  <match target="pattern">
+	<test name="family" compare="contains">
+	  <string>Monaco</string>
+	</test>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintnone</const>
+    </edit>
+    <edit name="globaladvance" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
 
   <!-- DejaVu and Bitstream -->
   <match target="pattern">
@@ -187,7 +211,7 @@
 	  <string>文泉驛等寬正黑</string>
     </test>
     <edit name="spacing">
-      <int>90</int>
+      <int>0</int>
     </edit>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -225,7 +249,7 @@
       <bool>true</bool>
     </edit>
     <edit name="spacing" mode="assign">
-      <int>90</int>
+      <int>0</int>
     </edit>
     <edit name="hinting" mode="assign">
       <bool>true</bool>
@@ -243,13 +267,14 @@
   <!-- WQY -->
 
   <!-- Microsoft YaHei -->
+
   <match target="pattern">
     <test name="family" compare="contains">
-      <string>Microsoft YaHei</string>
       <string>SimHei</string>
-      <string>微软雅黑</string>
+	  <string>Microsoft YaHei</string>
       <string>黑体</string>
       <string>黑體</string>
+	  <string>微软雅黑</string>
     </test>
     <edit name="antialias" mode="assign">
       <bool>true</bool>
@@ -267,6 +292,7 @@
       <bool>false</bool>
     </edit>
   </match>
+
   <!-- Microsoft YaHei -->
 
   <!-- Droid Sans Fallback -->
